--- a/index.html
+++ b/index.html
@@ -6,13 +6,14 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Calculator</title>
-    <link rel="icon" href="images/icon.svg">
+    <link rel="icon"  href="images/icon.svg">
     <link rel="stylesheet" href="styles/styles.css">
+    <link rel="stylesheet" href="styles/media.css">
 </head>
 <body>
 <div id="calculator">
     <input id="display" readonly>
-    <div id="keys">
+    <div  id="keys">
         <button class="operator-btn" onclick="appendToDisplay('+')">+</button>
         <button onclick="appendToDisplay('7')">7</button>
         <button onclick="appendToDisplay('8')">8</button>
